/**
 * PROJETO CRIADO POR :GRUPO30
 * Daniel Lopes - fc56357
 * Miguel Ramos - fc56377
 * Tom√°s Piteira - fc56303
 */

syntax = "proto3";
message message_t
 {
        entry_t entry = 1;
        int32 value = 2;
        repeated string keys_values = 3;
        enum Opcode {
                OP_BAD     	= 0;
                OP_SIZE    	= 10;
                OP_HEIGHT  	= 20;
                OP_DEL     	= 30;
                OP_GET     	= 40;
                OP_PUT     	= 50;
                OP_GETKEYS	= 60;
                OP_GETVALUES	= 70;
                OP_VERIFY       = 80;
                OP_ERROR   	= 99;
        }
        Opcode opcode = 4;

        enum C_type {
                CT_BAD    	= 0;
                CT_KEY    	= 10;
                CT_VALUE  	= 20;
                CT_ENTRY  	= 30;
                CT_KEYS   	= 40;
                CT_VALUES       = 50;
                CT_RESULT 	= 60;
                CT_NONE   	= 70;
                
        }
        C_type c_type = 5;
        bytes data = 6;
}
 message entry_t{
        string key = 1;
        data_t data = 2;
}
 message data_t{
   sint32 datasize = 1;
   string data = 2;
}

